tests/invalid/null.rs
use cstr_literal::cstr;

fn main() {
  cstr!("\0");
}
